Fixed Videos/Text Issue For Sebastian Tab When Screen Shrinks
Fixed the issue where if the windows where to shrink, the videos and text would not align properly and the second video would overlap the footer. Fixed this issue by treating them as columns within a container instead of trying to fix it using css. Also, I removed the extra css file I made since it was unnecessary now.

--- a/TommyNguyenPortfolio/wwwroot/css/site.css
+++ b/TommyNguyenPortfolio/wwwroot/css/site.css
@@ -2,6 +2,13 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 
+#NoteForVideos {
+    color: white;
+    text-decoration: underline;
+    text-decoration-style: solid;
+    text-shadow: 1px 1px 2px black;
+}
+
 tr {
     border: 1px solid black;
 }
